GME Gain: $ 212.06 Win %: 53.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4
GME Gain: $ -845.95 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP_DB6
GME Gain: $ -41.78 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR_DB6
GME Gain: $ -97.9 Win %: 46.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV_DB6
GME Gain: $ -38.89 Win %: 48.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL_DB6
GME Gain: $ -949.09 Win %: 38.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP_DB6
GME Gain: $ -121.64 Win %: 54.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR_DB6
GME Gain: $ -62.02 Win %: 49.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV_DB6
GME Gain: $ -988.31 Win %: 38.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP_DB6
GME Gain: $ 69.22 Win %: 38.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL_DB6
GME Gain: $ -444.98 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP_DB6
GME Gain: $ -200.06 Win %: 50.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_IR1
GME Gain: $ -750.42 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP
GME Gain: $ -1400.63 Win %: 33.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP_IR1
GME Gain: $ -101.11 Win %: 50.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR
GME Gain: $ -145.79 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV
GME Gain: $ -55.61 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL
GME Gain: $ -796.36 Win %: 37.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP
GME Gain: $ -144.99 Win %: 53.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR
GME Gain: $ -36.85 Win %: 46.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV
GME Gain: $ -841.53 Win %: 37.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP
GME Gain: $ -30.55 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL
GME Gain: $ -152.47 Win %: 57.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP
GME Gain: $ -13223.4 Win %: 22.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO_AC
GME Gain: $ 153.96 Win %: 57.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV
GME Gain: $ 111.16 Win %: 49.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IR1
GME Gain: $ -104.26 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR
GME Gain: $ -56.98 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AV
GME Gain: $ 10.79 Win %: 54.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AL
GME Gain: $ -118.93 Win %: 38.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_VI
GME Gain: $ -141.24 Win %: 46.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_LI
GME Gain: $ -693.82 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP
GME Gain: $ 101.52 Win %: 54.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM
GME Gain: $ 200.13 Win %: 66.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_SS
GME Gain: $ -62.54 Win %: 34.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QL
GME Gain: $ 85.46 Win %: 53.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_DB6
GME Gain: $ 118.36 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO
GME Gain: $ -1902.02 Win %: 36.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AC
GME Gain: $ 196.56 Win %: 61.00 in 75 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT
GME Gain: $ -912.42 Win %: 26.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR_QP_DB10
GME Gain: $ -4.97 Win %: 54.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_TR_DB10
GME Gain: $ -152.34 Win %: 48.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AV_DB10
GME Gain: $ 36.75 Win %: 57.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AL_DB10
GME Gain: $ -883.1 Win %: 22.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_QP_DB10
GME Gain: $ 23.49 Win %: 56.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_TR_DB10
GME Gain: $ -141.85 Win %: 53.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_AV_DB10
GME Gain: $ -922.4 Win %: 21.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_QP_DB10
GME Gain: $ -13.35 Win %: 42.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QL_DB10
GME Gain: $ -425.35 Win %: 36.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QP_DB10
GME Gain: $ -222.02 Win %: 52.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR_IR3
GME Gain: $ -651.02 Win %: 28.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR_QP
GME Gain: $ -758.95 Win %: 8.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_QP_IR3
GME Gain: $ 133.06 Win %: 61.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_TR
GME Gain: $ -280.43 Win %: 56.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AV
GME Gain: $ 183.9 Win %: 57.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AL
GME Gain: $ -802.45 Win %: 29.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_QP
GME Gain: $ 62.53 Win %: 60.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_TR
GME Gain: $ -203.28 Win %: 56.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_AV
GME Gain: $ -856.94 Win %: 26.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_QP
GME Gain: $ 52.82 Win %: 49.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QL
GME Gain: $ -433.77 Win %: 34.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QP
GME Gain: $ 133.86 Win %: 56.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AO_AC
GME Gain: $ 261.02 Win %: 56.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV
GME Gain: $ -270.67 Win %: 37.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IR3
GME Gain: $ 110.29 Win %: 60.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR
GME Gain: $ -647.89 Win %: 49.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AV
GME Gain: $ 119.73 Win %: 61.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AL
GME Gain: $ -185.05 Win %: 37.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_VI
GME Gain: $ 65.59 Win %: 52.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_LI
GME Gain: $ -926.11 Win %: 28.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_QP
GME Gain: $ -18.47 Win %: 57.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM
GME Gain: $ 156.25 Win %: 53.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_SS
GME Gain: $ 28.97 Win %: 41.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_QL
GME Gain: $ 38.91 Win %: 54.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_DB10
GME Gain: $ 177.63 Win %: 56.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AO
GME Gain: $ 184.96 Win %: 57.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AC
GME Gain: $ 44.91 Win %: 65.00 in 75 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT
GME Gain: $ -642.4 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
GME Gain: $ 45.65 Win %: 54.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
GME Gain: $ -193.15 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
GME Gain: $ -127.39 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
GME Gain: $ -938.31 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
GME Gain: $ -2.03 Win %: 53.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
GME Gain: $ -228.21 Win %: 45.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
GME Gain: $ -797.6 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
GME Gain: $ 60.04 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
GME Gain: $ -354.6 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
GME Gain: $ -107.07 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_IR1
GME Gain: $ -704.03 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP
GME Gain: $ -773.49 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_IR1
GME Gain: $ -43.5 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR
GME Gain: $ -271.44 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV
GME Gain: $ -18.07 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL
GME Gain: $ -966.11 Win %: 37.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP
GME Gain: $ -72.91 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR
GME Gain: $ -286.9 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV
GME Gain: $ -767.2 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP
GME Gain: $ -148.78 Win %: 37.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL
GME Gain: $ -367.08 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP
GME Gain: $ -26119.2 Win %: 20.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO_AC
GME Gain: $ 60.27 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV
GME Gain: $ 97.08 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IR1
GME Gain: $ -14.19 Win %: 53.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR
GME Gain: $ -332.76 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV
GME Gain: $ 62.09 Win %: 48.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL
GME Gain: $ -77.96 Win %: 34.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_VI
GME Gain: $ 97.42 Win %: 49.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_LI
GME Gain: $ -854.4 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP
GME Gain: $ 51.55 Win %: 57.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM
GME Gain: $ 92.53 Win %: 58.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_SS
GME Gain: $ -132.34 Win %: 36.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QL
GME Gain: $ 239.22 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_DB6
GME Gain: $ 95.54 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO
GME Gain: $ -1164.35 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AC
GME Gain: $ 160.42 Win %: 57.00 in 75 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT
GME Gain: $ -1111.35 Win %: 37.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB6
GME Gain: $ -619.26 Win %: 44.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB6
GME Gain: $ -303.11 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB6
GME Gain: $ -343.74 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB6
GME Gain: $ -1233.3 Win %: 36.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB6
GME Gain: $ -140.82 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB6
GME Gain: $ -411.91 Win %: 45.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB6
GME Gain: $ -1236.55 Win %: 34.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB6
GME Gain: $ -189.93 Win %: 36.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB6
GME Gain: $ -639.08 Win %: 33.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB6
GME Gain: $ -65.86 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_IR1
GME Gain: $ -692.7 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP
GME Gain: $ -936.33 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP_IR1
GME Gain: $ -54.83 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR
GME Gain: $ -118.93 Win %: 46.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV
GME Gain: $ 64.22 Win %: 50.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL
GME Gain: $ -861.43 Win %: 40.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP
GME Gain: $ -17.46 Win %: 57.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR
GME Gain: $ -271.02 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV
GME Gain: $ -1052.95 Win %: 41.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP
GME Gain: $ -65.88 Win %: 38.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL
GME Gain: $ -389.97 Win %: 53.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP
GME Gain: $ -16473.7 Win %: 20.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO_AC
GME Gain: $ 101.77 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV
GME Gain: $ 136.26 Win %: 58.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IR1
GME Gain: $ -10.41 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR
GME Gain: $ -172.43 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AV
GME Gain: $ 154.09 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AL
GME Gain: $ -73.06 Win %: 34.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_VI
GME Gain: $ 73.57 Win %: 56.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_LI
GME Gain: $ -799.34 Win %: 42.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP
GME Gain: $ 118.09 Win %: 58.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM
GME Gain: $ 171.63 Win %: 61.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_SS
GME Gain: $ -173.8 Win %: 38.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QL
GME Gain: $ 123.68 Win %: 52.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_DB6
GME Gain: $ 175.29 Win %: 57.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO
GME Gain: $ -16473.7 Win %: 20.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AC
GME Gain: $ 127.43 Win %: 58.00 in 75 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT
GME Gain: $ 212.07 Win %: 53.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4
GME Gain: $ -861.88 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP_DB6
GME Gain: $ -54.02 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR_DB6
GME Gain: $ -30.77 Win %: 47.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV_DB6
GME Gain: $ -22.1 Win %: 48.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL_DB6
GME Gain: $ -947.55 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP_DB6
GME Gain: $ -86.41 Win %: 53.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR_DB6
GME Gain: $ -78.95 Win %: 47.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV_DB6
GME Gain: $ -992.01 Win %: 38.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP_DB6
GME Gain: $ 42.91 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL_DB6
GME Gain: $ -445.1 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP_DB6
GME Gain: $ -203.5 Win %: 50.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_IR1
GME Gain: $ -745.59 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP
GME Gain: $ -1405.99 Win %: 32.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP_IR1
GME Gain: $ -125.48 Win %: 50.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR
GME Gain: $ -51.92 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV
GME Gain: $ 13.86 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL
GME Gain: $ -806.75 Win %: 35.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP
GME Gain: $ -147.71 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR
GME Gain: $ -44.14 Win %: 46.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV
GME Gain: $ -847.35 Win %: 36.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP
GME Gain: $ -53.79 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL
GME Gain: $ -157.83 Win %: 56.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP
GME Gain: $ -13593.2 Win %: 22.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO_AC
GME Gain: $ 154.33 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV
GME Gain: $ 64.25 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IR1
GME Gain: $ -106.98 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR
GME Gain: $ -78.64 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AV
GME Gain: $ 9.81 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AL
GME Gain: $ -117.32 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_VI
GME Gain: $ -137.06 Win %: 47.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_LI
GME Gain: $ -699.18 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP
GME Gain: $ 70.93 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM
GME Gain: $ 193.6 Win %: 65.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_SS
GME Gain: $ -25.43 Win %: 36.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QL
GME Gain: $ 78.54 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_DB6
GME Gain: $ 118.24 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO
GME Gain: $ -1955.59 Win %: 35.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AC
GME Gain: $ 196.95 Win %: 61.00 in 76 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT
GME Gain: $ -1097.09 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB6
GME Gain: $ -156.42 Win %: 46.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB6
GME Gain: $ -296.73 Win %: 44.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB6
GME Gain: $ -286.39 Win %: 43.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB6
GME Gain: $ -1232.66 Win %: 36.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB6
GME Gain: $ -143.47 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB6
GME Gain: $ -413.33 Win %: 44.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB6
GME Gain: $ -1249.01 Win %: 34.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB6
GME Gain: $ -224.89 Win %: 34.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB6
GME Gain: $ -651.14 Win %: 32.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB6
GME Gain: $ -101.3 Win %: 50.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_IR1
GME Gain: $ -678.99 Win %: 43.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP
GME Gain: $ -961.93 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP_IR1
GME Gain: $ -33.49 Win %: 56.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR
GME Gain: $ -158.86 Win %: 44.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV
GME Gain: $ 152.38 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL
GME Gain: $ -863.71 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP
GME Gain: $ -20.48 Win %: 56.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR
GME Gain: $ -278.63 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV
GME Gain: $ -1056.09 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP
GME Gain: $ -63.51 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL
GME Gain: $ -389.91 Win %: 53.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP
GME Gain: $ -16694.5 Win %: 19.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO_AC
GME Gain: $ 96.04 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV
GME Gain: $ 133.47 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IR1
GME Gain: $ -11.83 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR
GME Gain: $ -170.64 Win %: 43.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AV
GME Gain: $ 154.55 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AL
GME Gain: $ -71.9 Win %: 35.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_VI
GME Gain: $ 62.77 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_LI
GME Gain: $ -802.48 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP
GME Gain: $ 114.45 Win %: 59.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM
GME Gain: $ 161.58 Win %: 60.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_SS
GME Gain: $ -42.09 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QL
GME Gain: $ 138.56 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_DB6
GME Gain: $ 57.12 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO
GME Gain: $ -16475.3 Win %: 19.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AC
GME Gain: $ 126.29 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT
GME Gain: $ -916.75 Win %: 26.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR_QP_DB10
GME Gain: $ -21.43 Win %: 55.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_TR_DB10
GME Gain: $ -100.47 Win %: 51.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AV_DB10
GME Gain: $ 28.95 Win %: 57.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AL_DB10
GME Gain: $ -885.55 Win %: 22.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_QP_DB10
GME Gain: $ 23.59 Win %: 56.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_TR_DB10
GME Gain: $ -145.11 Win %: 52.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_AV_DB10
GME Gain: $ -924.53 Win %: 21.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_QP_DB10
GME Gain: $ -4.68 Win %: 43.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QL_DB10
GME Gain: $ -425.45 Win %: 35.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QP_DB10
GME Gain: $ -197.2 Win %: 51.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR_IR3
GME Gain: $ -655.35 Win %: 27.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR_QP
GME Gain: $ -768.32 Win %: 7.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_QP_IR3
GME Gain: $ 130.86 Win %: 60.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_TR
GME Gain: $ -598.59 Win %: 51.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AV
GME Gain: $ 183.21 Win %: 61.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_AL
GME Gain: $ -801.44 Win %: 30.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV_QP
GME Gain: $ 61.41 Win %: 59.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_TR
GME Gain: $ -99.14 Win %: 59.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_AV
GME Gain: $ -862.61 Win %: 26.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM_QP
GME Gain: $ 63.36 Win %: 50.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QL
GME Gain: $ -556.89 Win %: 34.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT_QP
GME Gain: $ 184.6 Win %: 56.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AO_AC
GME Gain: $ 241.04 Win %: 53.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_RV
GME Gain: $ -274.46 Win %: 36.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IR3
GME Gain: $ 105.6 Win %: 59.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_TR
GME Gain: $ -645.12 Win %: 50.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AV
GME Gain: $ 106.13 Win %: 60.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AL
GME Gain: $ -137.78 Win %: 39.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_VI
GME Gain: $ 66.17 Win %: 52.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_LI
GME Gain: $ -790.74 Win %: 30.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_QP
GME Gain: $ -118.93 Win %: 53.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_HM
GME Gain: $ 155.89 Win %: 52.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_SS
GME Gain: $ 4.66 Win %: 40.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_QL
GME Gain: $ 41.94 Win %: 55.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_DB10
GME Gain: $ 187.84 Win %: 57.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AO
GME Gain: $ 184.6 Win %: 56.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_AC
GME Gain: $ 44.98 Win %: 65.00 in 76 days with algo TB3_HI_QM_OB4_OS4_CB3_CS3_IT
GME Gain: $ -649.73 Win %: 43.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
GME Gain: $ -12.14 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
GME Gain: $ -338.85 Win %: 43.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
GME Gain: $ -61.21 Win %: 46.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
GME Gain: $ -943.33 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
GME Gain: $ -5.68 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
GME Gain: $ -229.93 Win %: 44.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
GME Gain: $ -798.62 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
GME Gain: $ 80.13 Win %: 46.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
GME Gain: $ -359.73 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
GME Gain: $ -83.33 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_IR1
GME Gain: $ -704.15 Win %: 42.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP
GME Gain: $ -704.77 Win %: 44.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_IR1
GME Gain: $ -50.25 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR
GME Gain: $ -345.8 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV
GME Gain: $ 55 Win %: 47.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL
GME Gain: $ -905.7 Win %: 38.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP
GME Gain: $ -66.71 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR
GME Gain: $ -245.65 Win %: 43.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV
GME Gain: $ -772.33 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP
GME Gain: $ -152.19 Win %: 36.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL
GME Gain: $ -305.8 Win %: 53.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP
GME Gain: $ -25670.1 Win %: 21.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO_AC
GME Gain: $ 62.48 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV
GME Gain: $ 97.15 Win %: 56.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IR1
GME Gain: $ -16.07 Win %: 52.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR
GME Gain: $ -379.77 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV
GME Gain: $ 62.74 Win %: 48.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL
GME Gain: $ -79.33 Win %: 35.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_VI
GME Gain: $ 100.73 Win %: 51.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_LI
GME Gain: $ -859.53 Win %: 40.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP
GME Gain: $ 51.62 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM
GME Gain: $ 89.69 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_SS
GME Gain: $ -135.75 Win %: 35.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QL
GME Gain: $ 246.37 Win %: 56.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_DB6
GME Gain: $ 104.08 Win %: 55.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO
GME Gain: $ -1168.4 Win %: 39.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AC
GME Gain: $ 160.49 Win %: 57.00 in 76 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT
GME Gain: $ 215.87 Win %: 53.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4
GME Gain: $ -864.28 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP_DB6
GME Gain: $ -51.96 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR_DB6
GME Gain: $ -31.33 Win %: 47.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV_DB6
GME Gain: $ -19.35 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL_DB6
GME Gain: $ -964.65 Win %: 37.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP_DB6
GME Gain: $ -92.59 Win %: 52.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR_DB6
GME Gain: $ -67.23 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV_DB6
GME Gain: $ -997.46 Win %: 37.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP_DB6
GME Gain: $ 74.55 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL_DB6
GME Gain: $ -445.14 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP_DB6
GME Gain: $ -207.22 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_IR1
GME Gain: $ -759.14 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP
GME Gain: $ -1410.66 Win %: 32.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP_IR1
GME Gain: $ -139.57 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR
GME Gain: $ -103.07 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV
GME Gain: $ 17.26 Win %: 58.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL
GME Gain: $ -825.36 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP
GME Gain: $ -153.58 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR
GME Gain: $ -39.08 Win %: 46.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV
GME Gain: $ -856.5 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP
GME Gain: $ -42.8 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL
GME Gain: $ -158.36 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP
GME Gain: $ -14052.7 Win %: 21.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO_AC
GME Gain: $ -134.7 Win %: 47.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP_PM
GME Gain: $ 152.98 Win %: 56.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV
GME Gain: $ 73.83 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IR1
GME Gain: $ -112.11 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR
GME Gain: $ -58.06 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AV
GME Gain: $ 13.5 Win %: 56.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AL
GME Gain: $ -117.98 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_VI
GME Gain: $ -137.23 Win %: 47.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_LI
GME Gain: $ -709.98 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP
GME Gain: $ 93.11 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM
GME Gain: $ 189.02 Win %: 66.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_SS
GME Gain: $ -26.77 Win %: 37.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QL
GME Gain: $ 90.2 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_DB6
GME Gain: $ 111.52 Win %: 53.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO
GME Gain: $ -1984.22 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AC
GME Gain: $ 202.73 Win %: 64.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT
GME Gain: $ -106.17 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_PM
GME Gain: $ -1135.35 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB6
GME Gain: $ -158.42 Win %: 46.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB6
GME Gain: $ -310.5 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB6
GME Gain: $ -291.59 Win %: 44.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB6
GME Gain: $ -1237.23 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB6
GME Gain: $ -141.31 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB6
GME Gain: $ -409.39 Win %: 46.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB6
GME Gain: $ -1249.06 Win %: 33.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB6
GME Gain: $ -187.55 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB6
GME Gain: $ -646.04 Win %: 32.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB6
GME Gain: $ -71.84 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_IR1
GME Gain: $ -662.2 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP
GME Gain: $ -961.49 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP_IR1
GME Gain: $ -88.81 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR
GME Gain: $ -165.7 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV
GME Gain: $ 143.41 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL
GME Gain: $ -867.04 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP
GME Gain: $ -24.44 Win %: 56.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR
GME Gain: $ -255.47 Win %: 44.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV
GME Gain: $ -1054.16 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP
GME Gain: $ -70.26 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL
GME Gain: $ -393.5 Win %: 52.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP
GME Gain: $ -17256.9 Win %: 17.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO_AC
GME Gain: $ -164.71 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP_PM
GME Gain: $ 85.69 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV
GME Gain: $ 141.52 Win %: 60.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IR1
GME Gain: $ -22.74 Win %: 53.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR
GME Gain: $ -177.77 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AV
GME Gain: $ 118.83 Win %: 56.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AL
GME Gain: $ -69.69 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_VI
GME Gain: $ 65.47 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_LI
GME Gain: $ -811.23 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP
GME Gain: $ 120.78 Win %: 58.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM
GME Gain: $ 160.68 Win %: 61.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_SS
GME Gain: $ 46.6 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QL
GME Gain: $ 126.04 Win %: 52.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_DB6
GME Gain: $ 187.02 Win %: 57.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO
GME Gain: $ -16991.3 Win %: 19.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AC
GME Gain: $ 120.44 Win %: 58.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT
GME Gain: $ -101.26 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_PM
GME Gain: $ -650.01 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
GME Gain: $ 68.89 Win %: 53.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
GME Gain: $ -238.89 Win %: 44.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
GME Gain: $ -33.86 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
GME Gain: $ -951.38 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
GME Gain: $ 7.01 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
GME Gain: $ -232.23 Win %: 44.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
GME Gain: $ -809.85 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
GME Gain: $ 51.02 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
GME Gain: $ -360.66 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
GME Gain: $ -76.53 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_IR1
GME Gain: $ -724.96 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP
GME Gain: $ -806.51 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_IR1
GME Gain: $ -56.82 Win %: 53.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR
GME Gain: $ -339.15 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV
GME Gain: $ 62.48 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL
GME Gain: $ -949.87 Win %: 37.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP
GME Gain: $ -74.02 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR
GME Gain: $ -290.63 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV
GME Gain: $ -774.56 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP
GME Gain: $ -155.65 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL
GME Gain: $ -322.05 Win %: 52.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP
GME Gain: $ -26885.7 Win %: 19.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO_AC
GME Gain: $ -131.29 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_PM
GME Gain: $ 63.68 Win %: 52.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV
GME Gain: $ 102.58 Win %: 57.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IR1
GME Gain: $ -24.41 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR
GME Gain: $ -333.95 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV
GME Gain: $ 62.9 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL
GME Gain: $ -77.19 Win %: 35.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_VI
GME Gain: $ 91.28 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_LI
GME Gain: $ -857.25 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP
GME Gain: $ 53.4 Win %: 57.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM
GME Gain: $ 88.56 Win %: 56.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_SS
GME Gain: $ -141.5 Win %: 34.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QL
GME Gain: $ 243.69 Win %: 57.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_DB6
GME Gain: $ 95.88 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO
GME Gain: $ -1276.21 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AC
GME Gain: $ 157.04 Win %: 57.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT
GME Gain: $ -71.98 Win %: 43.00 in 78 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_PM
GME Gain: $ -708.27 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_QP_DB6
GME Gain: $ 17.57 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
GME Gain: $ -134.94 Win %: 46.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AV_DB6
GME Gain: $ -13.53 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AL_DB6
GME Gain: $ -909.94 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_QP_DB6
GME Gain: $ -0.08 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_TR_DB6
GME Gain: $ -228.9 Win %: 44.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_AV_DB6
GME Gain: $ -836.19 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_QP_DB6
GME Gain: $ 28.9 Win %: 46.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QL_DB6
GME Gain: $ -333.29 Win %: 50.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QP_DB6
GME Gain: $ -94.66 Win %: 48.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_IR1
GME Gain: $ -926.3 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_QP
GME Gain: $ -920.13 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_QP_IR1
GME Gain: $ -45.74 Win %: 53.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_TR
GME Gain: $ -220.72 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AV
GME Gain: $ 139.65 Win %: 55.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AL
GME Gain: $ -846.33 Win %: 38.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_QP
GME Gain: $ -93.15 Win %: 51.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_TR
GME Gain: $ -306.58 Win %: 42.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_AV
GME Gain: $ -1012.11 Win %: 39.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_QP
GME Gain: $ -91.86 Win %: 41.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QL
GME Gain: $ -296.1 Win %: 56.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QP
GME Gain: $ -25732.3 Win %: 16.00 in 78 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AO_AC
